--- a/src/index.css
+++ b/src/index.css
@@ -580,7 +580,6 @@ footer{
 }
 
 #herobutton {
-  transform: translateY(1000%);
   transition: transform 1s ease-out;
 }
 
@@ -678,6 +677,9 @@ footer{
 
 
 @media screen and (max-width: 890px) {
+  .objectives{
+    width: 90%;
+  }
   .ham{
     display: flex;
     cursor: pointer;
@@ -690,7 +692,10 @@ footer{
     color: red;
   }
   .container{
-    width: 90%;
+    width: 80%;
+  }
+  .contactcont{
+    width: 95%;
   }
   .logo{
     z-index: 3;
@@ -897,7 +902,7 @@ footer{
 .newsss ul li{
   position: relative;
 }
-.newsss ul li a{
+.newsss ul li h3{
   /* position: absolute; */
   color: white;
   font-size: 1rem;
