tried to make the blog page work

--- a/src/index.css
+++ b/src/index.css
@@ -894,8 +894,9 @@ footer{
   padding: 5rem 0;
 }
 .newsss ul{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  flex-direction: column;
+  /* grid-template-columns: 1fr 1fr; */
   gap: 2rem;
   padding-top: 5rem;
 }
