--- a/src/index.css
+++ b/src/index.css
@@ -894,10 +894,10 @@ footer{
   padding: 5rem 0;
 }
 .newsss ul{
-  display: flex;
-  flex-direction: column;
-  /* grid-template-columns: 1fr 1fr; */
-  gap: 2rem;
+  display: grid;
+  /* flex-direction: column; */
+  grid-template-columns: 1fr 1fr;
+  gap: 4rem;
   padding-top: 5rem;
 }
 .newsss ul li{
@@ -915,7 +915,7 @@ footer{
   border-radius: 10px;
 }
 
-.newsss h2{
+.newsss h2, .adbs{
   color: white;
 
 }
