--- a/src/index.css
+++ b/src/index.css
@@ -229,11 +229,14 @@ header{
   font-size: 70px;
 }
 .vision:hover{
-  background-color:rgb(1,76,161);
+  background:transparent;
+  border: 1px solid white;
   box-shadow: 2px 2px 5px rgb(2, 58, 123);
   color: white;
 }
-
+.visionicon:hover{
+  color: white;
+}
 
 
 .key-features {
@@ -1151,3 +1154,40 @@ footer{
   margin: 0;
   font-size: 14px;
 }
+
+  @media (max-width: 868px) {
+    /* Styles for the 'introduction' section */
+    .introduction {
+      padding: 1rem;
+    }
+    
+    .introduction_content {
+      flex-direction: column;
+    }
+    
+    .introduction_content img {
+      width: 100%;
+      height: auto;
+      margin-bottom: 1rem;
+    }
+    
+    /* Styles for the 'visionsect' section */
+    .visionsect {
+      padding: 1rem;
+    }
+    
+    .visions {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+    
+    .vision {
+      width: 100%;
+    }
+    
+    .visionhead h4 {
+      top: 0;
+      font-size: 40px;
+    }
+  }
